Vastly improved authorization, making it behave like a user-facing app.

--- a/web_server/game_of_life_web_server/templates/login.html
+++ b/web_server/game_of_life_web_server/templates/login.html
@@ -13,6 +13,7 @@
         {{ form.username.label }} {{ form.username() }} <br>
         {{ form.password.label }} {{ form.password() }} <br>
         {{ form.submit() }}
+        <input type="hidden" id="forward_to" value="{{ forward_to }}">
     </form>
 </body>
 </html>
